crux-mir/test/symb_eval/sym_bytes/deserialize.good
test deserialize/3a1fbbbh::crux_test[0]: returned Symbolic BV, FAILED

failures:

---- deserialize/3a1fbbbh::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/sym_bytes/deserialize.rs:19:21: 19:44: error: in deserialize/3a1fbbbh::deserialize[0]
[Crux]   attempt to add with overflow

[Crux] Overall status: Invalid.
